--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "author": "John Doe",
-  "author_url": "https://google.com",
+  "author": "Rissol",
+  "author_url": "https://franciscoprospero.github.io/rissol/",
   "description": "A cookbook for my recipes",
   "output_folder": "./docs",
   "title": "My Cookbook",
